--- a/packages/@coorpacademy-components/src/organism/resource-browser/style.css
+++ b/packages/@coorpacademy-components/src/organism/resource-browser/style.css
@@ -15,6 +15,10 @@
   max-height: 343px;
 }
 
+.resourcePlayerWrapper {
+  height: 343px;
+}
+
 .resourcePlayer {
   width: 609px;
   display: flex;
